cmake_minimum_required(VERSION 3.26)
project(PhysicsBasedAnimationToolkitGpu VERSION 0.0.3 LANGUAGES CXX)

# Inherit dependencies from PhysicsBasedAnimationToolkit
file(COPY "PhysicsBasedAnimationToolkit/vcpkg.json" DESTINATION ${CMAKE_CURRENT_LIST_DIR})

# Put all binaries in same folder
include(GNUInstallDirs)
if (NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
    message(VERBOSE "PBAT[gpu] -- Set CMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif()
if (NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
    message(VERBOSE "PBAT[gpu] -- Set CMAKE_LIBRARY_OUTPUT_DIRECTORY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
endif()
if (NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
    message(VERBOSE "PBAT[gpu] -- Set CMAKE_ARCHIVE_OUTPUT_DIRECTORY=${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
endif()

# Build PhysicsBasedAnimationToolkit locally
set(PBAT_ENABLE_PROFILER TRUE CACHE BOOL "" FORCE)
set(PBAT_PROFILE_ON_DEMAND TRUE CACHE BOOL "" FORCE)
set(PBAT_BUILD_PYTHON_BINDINGS TRUE CACHE BOOL "" FORCE)
set(PBAT_USE_CUDA TRUE CACHE BOOL "" FORCE)
add_subdirectory(PhysicsBasedAnimationToolkit)
